--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,13 +14,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/time"
+        <LinearLayout
+            android:id="@+id/layout_time"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="center"
-            android:text="시간선택"
-            android:textSize="20dp" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:text="시간"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/text_time"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="30dp"
+                android:gravity="center_vertical"
+                android:text="-"
+                android:textSize="20dp" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/text_1"
@@ -115,7 +130,8 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:gravity="center"
+            android:layout_marginLeft="30dp"
+            android:gravity="center_vertical"
             android:text="보험등록"
             android:textSize="20dp" />
     </LinearLayout>
